# biennale-eeg-glyphs

./: .cursorignore  .gitignore  .gitmodules  biennale-eeg-glyphs.code-workspace
app/: ANALYSIS.md  CHANGELOG.md  Cargo.toml  Info.plist  LICENSE  PARAMETERS.md  README.md  build.rs
app/eeg-viewer/: .gitignore  Cargo.toml  README.md
app/eeg-viewer/src/: main.rs  muse_ble.rs
app/ffi/: act_bridge.cpp  act_bridge.h  test_bridge.cpp
app/src/: absorption.rs  act.rs  act_ffi.rs  alpha.rs  approach.rs  baseline.rs  compute.rs  entrainment.rs  filters.rs  lib.rs  main.rs  muse_client.rs  parse.rs  protocol.rs  types.rs
app/tests/: act_integration.rs
services/print-glyph/: README.md  pyproject.toml
services/print-glyph/src/print_glyph/: print_receipt.py
services/zuna/: .gitignore  fif_pair_to_eegd.py  muse_eeg_to_fif.py  pyproject.toml  run_fif_pipeline.py
