[package]
name          = "muse-rs"
version       = "0.1.0"
edition       = "2021"
description   = "Rust client for Muse EEG headsets over BLE using btleplug"
keywords      = ["exg", "eeg", "ppg", "imu", "muse"]
authors       = ["Eugene Hauptmann"]
license-file  = "LICENSE"
homepage      = "https://github.com/eugenehp/muse-rs"
repository    = "https://github.com/eugenehp/muse-rs"
documentation = "https://docs.rs/muse-rs"

# ── Library target ────────────────────────────────────────────────────────────
# Produces `libmuse_rs.rlib` (and .so / .dylib for cdylib users).
# Downstream crates depend on this target; the TUI binaries below are separate.

[lib]
name = "muse_rs"
path = "src/lib.rs"

# ── Binary targets ────────────────────────────────────────────────────────────

# Headless CLI: scan, connect, and print all events to stdout.
[[bin]]
name = "muse-rs"
path = "src/main.rs"

# Full-screen ratatui TUI — requires the `tui` feature (enabled by default).
[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

# OSC reader: receive Mind Monitor OSC stream and log to CSV for comparison.
[[bin]]
name = "osc-reader"
path = "src/bin/osc_reader.rs"

# ── Features ──────────────────────────────────────────────────────────────────
#
# tui (default) — pulls in ratatui + crossterm for the terminal UI binary.
#
# Library consumers that don't need the TUI can opt out and avoid compiling
# those dependencies:
#
#   [dependencies]
#   muse-rs = { version = "...", default-features = false }

[features]
default = ["tui"]
tui     = ["dep:ratatui", "dep:crossterm"]
act     = ["dep:rustfft"]

# ── Core library dependencies ─────────────────────────────────────────────────

[dependencies]
btleplug   = "0.11.8"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["v4"] }
futures    = "0.3"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
rosc       = "0.10"
clap       = { version = "4", features = ["derive"] }

# ── Optional TUI dependencies (feature = "tui") ───────────────────────────────

ratatui   = { version = "0.30.0", features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
rustfft   = { version = "6", optional = true }

# ── Build dependencies ────────────────────────────────────────────────────────

[build-dependencies]
cc = "1"

# ── Patch ──────────────────────────────────────────────────────────────────────
# Use a fork of btleplug with improved macOS disconnect handling, expanded
# broadcast channel buffers, and null-safety fixes.  The crates.io dependency
# above keeps `cargo publish` happy; the patch overrides it at build time.
# See: https://github.com/eugenehp/btleplug/tree/imrpoved_mac_version

[patch.crates-io]
btleplug = { git = "https://github.com/eugenehp/btleplug.git", branch = "imrpoved_mac_version" }
