[package]
name = "eeg-viewer"
version = "0.1.0"
edition = "2021"
description = "Live multi-channel f32 EEG plot that reads binary frames from stdin or TCP"
license = "LICENSE"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_plot = "0.29"
muse-rs = { path = "..", default-features = false }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
