[project]
name = "print-glyph"
version = "0.1.0"
description = "Rongta thermal printer service"
requires-python = ">=3.11"
authors = [{ name = "Rohit Korrapolu" }]

dependencies = [
  "python-escpos>=3.1",
  "pyusb>=1.3.1",
  "pillow>=11.0.0",
  "numpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/print_glyph"]

[project.optional-dependencies]
lint = ["ruff", "ty"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "-s -v"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
indent-width = 2
line-length = 100
src = ["src"]

[tool.ruff.lint]
preview = true
select = [
  "E",       # pycodestyle
  "F",       # pyflakes
  "W",       # pycodestyle warnings
  "I",       # isort
  "C",       # flake8-comprehensions
  "B",       # flake8-bugbear
  "UP",      # pyupgrade
  "RUF",     # ruff specific rules
  "PLW1514", # unspecified-encoding (require encoding in open calls)
]
ignore = ["E111", "E114", "E501", "C901", "RUF001", "RUF069", "UP036"]

[tool.ruff.lint.isort]
known-first-party = ["print_glyph"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ty]
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = []

[tool.ty.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["src/tests/**"]
[tool.ty.overrides.rules]
invalid-return-type = "ignore"
