[project]
name = "zuna-runner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "einops>=0.8.2",
  "huggingface-hub>=1.7.2",
  "matplotlib>=3.10.8",
  "mne>=1.11.0",
  "scipy>=1.17.1",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "torchvision>=0.25.0",
  "zuna",
]

[tool.uv.sources]
zuna = { git = "https://github.com/zyphra/zuna" }

[dependency-groups]
dev = ["ipykernel>=7.2.0", "jupyter>=1.1.1"]
